--- a/disfluency.html
+++ b/disfluency.html
@@ -45,18 +45,18 @@
             <p>参照音声サンプル1（フィラー）</p>
             <audio src="wav/example/ref-A01M0077_0234861_0240206.wav" controls preload="auto"></audio>
             <ul>
-                <li>非流暢性スタイルをより再現している音声</li>
+                <li>非流暢性スタイルをより再現している音声サンプル</li>
                 <audio src="wav/example/tag2-A01M0077_3348556_3354354.wav" controls preload="auto"></audio>
-                <li>非流暢性スタイルを再現できていない音声</li>
+                <li>非流暢性スタイルを再現できていない音声サンプル</li>
                 <audio src="wav/example/p-A01M0077_3348556_3354354.wav" controls preload="auto"></audio>
             </ul>
 
             <p>参照音声サンプル2（言いよどみ）</p>
             <audio src="wav/example/ref-A08M0257_0376466_0380222.wav" controls preload="auto"></audio>
             <ul>
-                <li>非流暢性スタイルをより再現している音声</li>
+                <li>非流暢性スタイルをより再現している音声サンプル</li>
                 <audio src="wav/example/tag2-A08M0257_0070967_0075347.wav" controls preload="auto"></audio>
-                <li>非流暢性スタイルを再現できていない音声</li>
+                <li>非流暢性スタイルを再現できていない音声サンプル</li>
                 <audio src="wav/example/p-A08M0257_0070967_0075347.wav" controls preload="auto"></audio>
             </ul>
 
