--- a/index.html
+++ b/index.html
@@ -15,18 +15,17 @@
         <h1>MOS Test for Disfluency</h1>
 
         評価実験へのご協力、感謝します。</br>
-        各音声を聴いて、相応しいと思う評価を付けてください。</br>
-        以下、実験の詳細と、今回扱う「非流暢性」について説明します。
+        各音声を聴いて、講演音声としての自然性について相応しいと思う評価を付けてください。</br>
+        以下、実験の詳細と、今回の音声に含まれる「非流暢性」について説明します。
 
 
         <h2>実験手順</h2>
         <ol>
             <li>名前を入力し、1か2のセット番号を選んで下さい。</li>
             <li>"Start Experiment"を押して下さい。</li>
-            <li>非流暢性を含む参照音声が1つと、評価対象の音声が2つ配置されています。</li>
-            <li>全ての音声を聴き、相応しいと思った評価を選択して下さい。</li>
-            <li>各ページには2つの評価項目があります。</li>
-            <li>全ての選択を終えたら"next"ボタンを押し、次の実験に進んで下さい。</li>
+            <li>非流暢性を含む講演音声が配置されています。</li>
+            <li>音声を聴き、講演音声としての総合的な自然性について相応しいと思った評価を選択して下さい。</li>
+            <li>選択を終えたら"next"ボタンを押し、次の実験に進んで下さい。</li>
             <li>評価実験を全て終えたら"finish"ボタンを押して結果をダウンロードして下さい。<br>
                 結果はSlackか下記のメールアドレスに送信して下さい。</li>
             <li>Emailアドレス: yoshioka.daiki@g.sp.m.is.nagoya-u.ac.jp</font>
@@ -68,6 +67,7 @@
         <h2>注意</h2>
         <ul>
             <li>この実験は凡そ15～20分ほど要します。</li>
+            <li>音声の内容については考慮しないでください。</li>
             <li>実験中はページの再読み込みは行わないで下さい。</li>
             <li>スマートフォンでは結果をダウンロードできない場合があるのでPCを使用して下さい。</li>
             <li>ヘッドホンやイヤホンを着用した状態で行って下さい。</li>
