--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <li>"Start Experiment"を押して下さい。</li>
             <li>非流暢性を含む講演音声が配置されています。</li>
             <li>音声を聴き、講演音声としての総合的な自然性について相応しいと思った評価を選択して下さい。</li>
+            <li>（評価基準は、「人間の声らしさ」です。）</li>
             <li>選択を終えたら"next"ボタンを押し、次の実験に進んで下さい。</li>
             <li>評価実験を全て終えたら"finish"ボタンを押して結果をダウンロードして下さい。<br>
                 結果はSlackか下記のメールアドレスに送信して下さい。</li>
