--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>MOS Test for Disfluency</h1>
 
         評価実験へのご協力、感謝します。</br>
-        各音声を聴いて、講演音声としての自然性について相応しいと思う評価を付けてください。</br>
+        各音声を聴いて、総合的な自然性について相応しいと思う評価を付けてください。</br>
         以下、実験の詳細と、今回の音声に含まれる「非流暢性」について説明します。
 
 
@@ -25,7 +25,7 @@
             <li>"Start Experiment"を押して下さい。</li>
             <li>非流暢性を含む講演音声が配置されています。</li>
             <li>音声を聴き、講演音声としての総合的な自然性について相応しいと思った評価を選択して下さい。</li>
-            <li>（評価基準は、「人間の声らしさ」です。）</li>
+            <li>評価基準は、「人間の声らしいと感じるか」です。</li>
             <li>選択を終えたら"next"ボタンを押し、次の実験に進んで下さい。</li>
             <li>評価実験を全て終えたら"finish"ボタンを押して結果をダウンロードして下さい。<br>
                 結果はSlackか下記のメールアドレスに送信して下さい。</li>
